[package]
name = "micox"
version = "0.0.0"
edition = "2018"
authors = ["airt <airtial@gmail.com>"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
pc-keyboard = "0.5"
pic8259_simple = "0.2"
spin = "0.5"
uart_16550 = "0.2"
volatile = "0.2"
x86_64 = "0.11"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
